--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,6 +32,7 @@ body {
   font-weight: inherit;
   font-size: 64px;
   text-transform: capitalize;
+  font-weight: 400;
 }
 .hero-title-part {
   font-weight: 700;
