--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,7 +16,16 @@ body {
   line-height: 1.17;
   font-weight: 400;
 }
+.container {
+  max-width: 1650px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
 .header {
+  padding-top: 32px;
+  padding-bottom: 32px;
   background-color: var(--colorBgPrimary);
 }
 .nav-link {
@@ -28,6 +37,10 @@ body {
   color: var(--colorButton);
 }
 /* hero */
+.hero-content {
+  padding-top: 150px;
+  padding-bottom: 365px;
+}
 .hero-title {
   font-weight: inherit;
   font-size: 64px;
@@ -48,6 +61,10 @@ body {
 .about {
   background-color: var(--colorBgSection);
 }
+.about-content {
+  padding-top: 100px;
+  padding-bottom: 100px;
+}
 .about-title {
   font-weight: 700;
   font-size: 40px;
@@ -63,4 +80,57 @@ body {
   letter-spacing: 0.06em;
   text-decoration: none;
   color: var(--colorTextPrimary);
+}
+/* benefits */
+.benefits {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.benefits-title {
+  font-size: 32px;
+  font-weight: 700;
+  text-transform: capitalize;
+}
+/* services */
+.services {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.services-title {
+  font-weight: 700;
+  font-size: 40px;
+  text-transform: capitalize;
+  text-align: center;
+}
+.services-text {
+  font-size: 32px;
+  text-align: center;
+}
+.services-name {
+  font-weight: 600;
+}
+.services-button {
+  font-family: var(--fontSecondary);
+  letter-spacing: 0.06em;
+  border: 3px solid var(--colorButton);
+  border-radius: 5px;
+  background-color: transparent;
+}
+/* footer */
+.footer {
+  padding-top: 35px;
+  padding-bottom: 35px;
+  background-color: var(--colorBgPrimary);
+}
+.footer-logo {
+  font-weight: 300;
+  font-size: 40px;
+  text-transform: capitalize;
+  color: var(--colorTextContrast);
+}
+.footer-logo-part {
+  font-weight: 700;
+}
+.footer-policy {
+  color: var(--colorTextContrast);
 }
